# tcp-ip-from-scratch

./: 01-foundations.out.txt  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: 00-foundations.py  01-foundations.py  02-tls-https.out.txt  02-tls-https.py
