[project]
name = "tcp-ip-from-scratch"
version = "0.1.0"
description = "Learn networking protocols by implementing them from scratch and seeing the actual bytes"
authors = [{name = "Cyprian Zdebski", email = "shipurjan@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scapy==2.6.1",
]

[dependency-groups]
dev = [
    "basedpyright",
    "ruff",
]

[tool.basedpyright]
reportAttributeAccessIssue = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportAny = false
